# abb_surrogate

./: CMakeLists.txt  README.md  package.xml  setup.py
configs/: vo_camera_params.yaml  vo_dense_params.yaml  vo_detector_params.yaml  vo_estimator_params.yaml  vo_pipeline_params.yaml  vo_tracker_params.yaml
include/abb_surrogate/: RobotInterface.h
launch/: arm_bandit.launch  arm_driver.launch  dense_vo_interface.launch  random_movement.launch  rewards.launch  synchronous_policy.launch  visual_odometry.launch  vo_bandit_policy.launch  vo_param_interface.launch
launch/bandit/evaluators/: async_bandit_line.launch  bandit_circles.launch  bandit_line.launch
launch/bandit/optimizers/: bandit_bo_no_context.launch  bandit_bo_no_context_sequential.launch  bandit_cma.launch  bandit_pg.launch
launch/characterization/: async_random_samples.launch  bandit_dimension_samples.launch  bandit_random_samples.launch  step_response.launch  step_response_no_context.launch  step_response_with_context.launch  sync_dimension_samples.launch  sync_random_samples.launch
launch/evaluators/: bandit_base.launch  cont_bandit.launch  sync_bandit.launch
launch/motion/: continuous_circles.launch  continuous_line.launch
launch/multistep/: arm_rl.launch  continuous_policy.launch  continuous_ppge.launch
launch/optimizers/: bandit_bo.launch  bandit_bo_contextual.launch  bandit_bo_no_context.launch  bandit_cma.launch
python/abb_surrogate/: ArmUtils.py  __init__.py
scripts/: Box2DPoses.py  Random2DPoses.py  RandomSpeedWaypoints.py  SynchronizedDimensionSample.py  SynchronizedRandomSample.py
scripts/arm_motion/: CenteredCircles.py  Random2DPoses.py  RandomSpeedWaypoints.py  SinusoidalPoses.py
scripts/specialized_tests/: StepResponse.py
src/: RobotInterface.cpp
srv/: SetSpeed.srv
