<?xml version="1.0"?>
<package>
  <name>abb_surrogate</name>
  <version>0.0.1</version>
  <description>Software to use an ABB arm to simulate a ground robot.</description>
  <author>Humphrey Hu</author>
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>AFLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>argus_utils</build_depend>
  <build_depend>open_abb_driver</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>argus_utils</run_depend>
  <run_depend>open_abb_driver</run_depend>
  
</package>
